(fix): fixing bug on the users body
