# src/swagger.json
@@ -1129,6 +1129,12 @@
           },
           "level": {
             "type": "string"
+          },
+          "created_at": {
+            "type": "string"
+          },
+          "updated_at": {
+            "type": "string"
           }
         }
       }
